@@ -307,6 +307,8 @@ extern int z88_eprom_new_ptr_flash_find_next(z80_byte **ptr_dir,z88_eprom_flash_
 
 extern int z88_get_total_ram(void);
 
+extern int do_not_run_init_z88_memory_slots;
+
 
 #define BM_INTKWAIT 0x80
 // Bit 7, If set, reading the keyboard will Snooze
