@@ -70,7 +70,8 @@ Fixed handling files larger than 2 GB on 32 bit CPU (including the Windows versi
 Fixed using mmc images larger than 2 GB
 Fixed redrawing ZX Desktop when resizing window
 Fixed hang when using View Variables and memory corrupted
-Fixed bug that may crash ZEsarUX when starting machine ZX Spectrum +2 Spanish. This is a bug that has always existed.
+Fixed bug that may crash ZEsarUX when starting machine ZX Spectrum +2 Spanish. This is a bug that has always existed
+Fixed losing inserted Z88 cards when changing cpu speed
 Fixed Z80 behavior after EI or DD/FD prefixes and interrupts
 Fixed Z80 behavior running block opcodes (LDIR, etc) and interrupts
 Fixed .Z80 Timex TS2068 snapshot loading
